QtWebEngineWidgets/gen_qwebenginedownloaditem.nim

import Qt5WebEngineWidgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5WebEngineWidgets")
{.compile("gen_qwebenginedownloaditem.cpp", cflags).}


type QWebEngineDownloadItemDownloadStateEnum* = distinct cint
template DownloadRequested*(_: type QWebEngineDownloadItemDownloadStateEnum): untyped = 0
template DownloadInProgress*(_: type QWebEngineDownloadItemDownloadStateEnum): untyped = 1
template DownloadCompleted*(_: type QWebEngineDownloadItemDownloadStateEnum): untyped = 2
template DownloadCancelled*(_: type QWebEngineDownloadItemDownloadStateEnum): untyped = 3
template DownloadInterrupted*(_: type QWebEngineDownloadItemDownloadStateEnum): untyped = 4


type QWebEngineDownloadItemSavePageFormatEnum* = distinct cint
template UnknownSaveFormat*(_: type QWebEngineDownloadItemSavePageFormatEnum): untyped = -1
template SingleHtmlSaveFormat*(_: type QWebEngineDownloadItemSavePageFormatEnum): untyped = 0
template CompleteHtmlSaveFormat*(_: type QWebEngineDownloadItemSavePageFormatEnum): untyped = 1
template MimeHtmlSaveFormat*(_: type QWebEngineDownloadItemSavePageFormatEnum): untyped = 2


type QWebEngineDownloadItemDownloadInterruptReasonEnum* = distinct cint
template NoReason*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 0
template FileFailed*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 1
template FileAccessDenied*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 2
template FileNoSpace*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 3
template FileNameTooLong*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 5
template FileTooLarge*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 6
template FileVirusInfected*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 7
template FileTransientError*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 10
template FileBlocked*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 11
template FileSecurityCheckFailed*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 12
template FileTooShort*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 13
template FileHashMismatch*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 14
template NetworkFailed*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 20
template NetworkTimeout*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 21
template NetworkDisconnected*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 22
template NetworkServerDown*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 23
template NetworkInvalidRequest*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 24
template ServerFailed*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 30
template ServerBadContent*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 33
template ServerUnauthorized*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 34
template ServerCertProblem*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 35
template ServerForbidden*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 36
template ServerUnreachable*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 37
template UserCanceled*(_: type QWebEngineDownloadItemDownloadInterruptReasonEnum): untyped = 40


type QWebEngineDownloadItemDownloadTypeEnum* = distinct cint
template Attachment*(_: type QWebEngineDownloadItemDownloadTypeEnum): untyped = 0
template DownloadAttribute*(_: type QWebEngineDownloadItemDownloadTypeEnum): untyped = 1
template UserRequested*(_: type QWebEngineDownloadItemDownloadTypeEnum): untyped = 2
template SavePage*(_: type QWebEngineDownloadItemDownloadTypeEnum): untyped = 3


import gen_qwebenginedownloaditem_types
export gen_qwebenginedownloaditem_types

import
  gen_qobject,
  gen_qobjectdefs,
  gen_qobjectdefs_types,
  gen_qurl_types,
  gen_qwebenginepage_types
export
  gen_qobject,
  gen_qobjectdefs,
  gen_qobjectdefs_types,
  gen_qurl_types,
  gen_qwebenginepage_types

type cQWebEngineDownloadItem*{.exportc: "QWebEngineDownloadItem", incompleteStruct.} = object

proc fcQWebEngineDownloadItem_metaObject(self: pointer, ): pointer {.importc: "QWebEngineDownloadItem_metaObject".}
proc fcQWebEngineDownloadItem_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebEngineDownloadItem_metacast".}
proc fcQWebEngineDownloadItem_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebEngineDownloadItem_metacall".}
proc fcQWebEngineDownloadItem_tr(s: cstring): struct_miqt_string {.importc: "QWebEngineDownloadItem_tr".}
proc fcQWebEngineDownloadItem_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebEngineDownloadItem_trUtf8".}
proc fcQWebEngineDownloadItem_id(self: pointer, ): cuint {.importc: "QWebEngineDownloadItem_id".}
proc fcQWebEngineDownloadItem_state(self: pointer, ): cint {.importc: "QWebEngineDownloadItem_state".}
proc fcQWebEngineDownloadItem_totalBytes(self: pointer, ): clonglong {.importc: "QWebEngineDownloadItem_totalBytes".}
proc fcQWebEngineDownloadItem_receivedBytes(self: pointer, ): clonglong {.importc: "QWebEngineDownloadItem_receivedBytes".}
proc fcQWebEngineDownloadItem_url(self: pointer, ): pointer {.importc: "QWebEngineDownloadItem_url".}
proc fcQWebEngineDownloadItem_mimeType(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_mimeType".}
proc fcQWebEngineDownloadItem_path(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_path".}
proc fcQWebEngineDownloadItem_setPath(self: pointer, path: struct_miqt_string): void {.importc: "QWebEngineDownloadItem_setPath".}
proc fcQWebEngineDownloadItem_isFinished(self: pointer, ): bool {.importc: "QWebEngineDownloadItem_isFinished".}
proc fcQWebEngineDownloadItem_isPaused(self: pointer, ): bool {.importc: "QWebEngineDownloadItem_isPaused".}
proc fcQWebEngineDownloadItem_savePageFormat(self: pointer, ): cint {.importc: "QWebEngineDownloadItem_savePageFormat".}
proc fcQWebEngineDownloadItem_setSavePageFormat(self: pointer, format: cint): void {.importc: "QWebEngineDownloadItem_setSavePageFormat".}
proc fcQWebEngineDownloadItem_typeX(self: pointer, ): cint {.importc: "QWebEngineDownloadItem_type".}
proc fcQWebEngineDownloadItem_interruptReason(self: pointer, ): cint {.importc: "QWebEngineDownloadItem_interruptReason".}
proc fcQWebEngineDownloadItem_interruptReasonString(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_interruptReasonString".}
proc fcQWebEngineDownloadItem_isSavePageDownload(self: pointer, ): bool {.importc: "QWebEngineDownloadItem_isSavePageDownload".}
proc fcQWebEngineDownloadItem_suggestedFileName(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_suggestedFileName".}
proc fcQWebEngineDownloadItem_downloadDirectory(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_downloadDirectory".}
proc fcQWebEngineDownloadItem_setDownloadDirectory(self: pointer, directory: struct_miqt_string): void {.importc: "QWebEngineDownloadItem_setDownloadDirectory".}
proc fcQWebEngineDownloadItem_downloadFileName(self: pointer, ): struct_miqt_string {.importc: "QWebEngineDownloadItem_downloadFileName".}
proc fcQWebEngineDownloadItem_setDownloadFileName(self: pointer, fileName: struct_miqt_string): void {.importc: "QWebEngineDownloadItem_setDownloadFileName".}
proc fcQWebEngineDownloadItem_page(self: pointer, ): pointer {.importc: "QWebEngineDownloadItem_page".}
proc fcQWebEngineDownloadItem_accept(self: pointer, ): void {.importc: "QWebEngineDownloadItem_accept".}
proc fcQWebEngineDownloadItem_cancel(self: pointer, ): void {.importc: "QWebEngineDownloadItem_cancel".}
proc fcQWebEngineDownloadItem_pause(self: pointer, ): void {.importc: "QWebEngineDownloadItem_pause".}
proc fcQWebEngineDownloadItem_resume(self: pointer, ): void {.importc: "QWebEngineDownloadItem_resume".}
proc fcQWebEngineDownloadItem_finished(self: pointer, ): void {.importc: "QWebEngineDownloadItem_finished".}
proc fQWebEngineDownloadItem_connect_finished(self: pointer, slot: int) {.importc: "QWebEngineDownloadItem_connect_finished".}
proc fcQWebEngineDownloadItem_stateChanged(self: pointer, state: cint): void {.importc: "QWebEngineDownloadItem_stateChanged".}
proc fQWebEngineDownloadItem_connect_stateChanged(self: pointer, slot: int) {.importc: "QWebEngineDownloadItem_connect_stateChanged".}
proc fcQWebEngineDownloadItem_downloadProgress(self: pointer, bytesReceived: clonglong, bytesTotal: clonglong): void {.importc: "QWebEngineDownloadItem_downloadProgress".}
proc fQWebEngineDownloadItem_connect_downloadProgress(self: pointer, slot: int) {.importc: "QWebEngineDownloadItem_connect_downloadProgress".}
proc fcQWebEngineDownloadItem_isPausedChanged(self: pointer, isPaused: bool): void {.importc: "QWebEngineDownloadItem_isPausedChanged".}
proc fQWebEngineDownloadItem_connect_isPausedChanged(self: pointer, slot: int) {.importc: "QWebEngineDownloadItem_connect_isPausedChanged".}
proc fcQWebEngineDownloadItem_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebEngineDownloadItem_tr2".}
proc fcQWebEngineDownloadItem_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebEngineDownloadItem_tr3".}
proc fcQWebEngineDownloadItem_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QWebEngineDownloadItem_trUtf82".}
proc fcQWebEngineDownloadItem_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QWebEngineDownloadItem_trUtf83".}
proc fcQWebEngineDownloadItem_staticMetaObject(): pointer {.importc: "QWebEngineDownloadItem_staticMetaObject".}
proc fcQWebEngineDownloadItem_delete(self: pointer) {.importc: "QWebEngineDownloadItem_delete".}


func init*(T: type gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, h: ptr cQWebEngineDownloadItem): gen_qwebenginedownloaditem_types.QWebEngineDownloadItem =
  T(h: h)
proc metaObject*(self: gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQWebEngineDownloadItem_metaObject(self.h))

proc metacast*(self: gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, param1: cstring): pointer =
  fcQWebEngineDownloadItem_metacast(self.h, param1)

proc metacall*(self: gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, param1: cint, param2: cint, param3: pointer): cint =
  fcQWebEngineDownloadItem_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, s: cstring): string =
  let v_ms = fcQWebEngineDownloadItem_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qwebenginedownloaditem_types.QWebEngineDownloadItem, s: cstring): string =
  let v_ms = fcQWebEngineDownloadItem_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
